--- a/index.html
+++ b/index.html
@@ -893,6 +893,12 @@
 <p class="patchnotes"><br><a href="#e24">Entry 24: From <em>The Kinds of Human</em></a></p> 
 <p class="patchnotes"><br><a href="#e25">Entry 25: From a meeting between Altria and Bennitri</a></p>
 <p class="patchnotes"><br><a href="#e26">Entry 26: From <em>Profile: Bennitri</em></a></p>  
+<p class="patchnotes"><br><a href="#e27">Entry 27: From <em>The Colonies of Myalvi</em></a></p>  
+<p class="patchnotes"><br><a href="#e28">Entry 28: From an informal commentary on <em>The Colonies of Myalvi</em></a></p>  
+<p class="patchnotes"><br><a href="#e29">Entry 29: From an anonymous review of <em>Mew Mew Kissy Cutie 2</em></a></p>  
+<p class="patchnotes"><br><a href="#e30">Entry 30: From a commentary on Myalvi culture by an unknown author</a></p>  
+<p class="patchnotes"><br><a href="#e31">Entry 31: From a compilation of the entries of Dr. Gaster</a></p> 
+<p class="patchnotes"><br><a href="#e32">Entry 32: From a flyer for the Gaster Followers</a></p>  
 <hr>
 
 <h3 class="patchnotes" id="vg">Vector's Socials</h3>
@@ -1738,8 +1744,125 @@ Sarnelkh Seransai (904 SR-present)</p>
   <span>Arsamitev: "Haha, 'the Krizhan people'. Korhision was an empire."</span>
 </p>
 
+<h1 id="e29">From an anonymous review of <em>Mew Mew Kissy Cutie 2</em></h1>
+<h3 class="patchnotes"><em>913, Yarzon-Ebott</em> </h1>
+  <p>
+  <span>The change to the new Sbeva-based production team was a bad call. The original people from Hesan understood the world of Durzir (obviously) and what stories there were to be told within it. I've seen and read a lot of other Durzir content by a bunch of different authors, and they all seem to get it as well.</span>
+</p>
+
+<p>
+  <span>But not the new Mew Mew team. It's like they took one look at Mew Mew 1 and decided "hey, let's make a sequel!" without understanding anything else about how Durzir worked. For example, they chose (or did they even choose!?) to set it not in Durzir but in this awkward mashup of Durzir and Yona where donno exist and ruin Mew Mew's unique characteristic. In fact, they ruined Mew Mew's entire character in general! Please, do some basic research. Review: Mew Mew Kissy Cutie 2 is neither Kissy nor Cutie. It's trash. 0 stars.</span>
+</p>
+
+<h1 id="e30">From a commentary on Myalvi culture by an unknown author</h1>
+<h3 class="patchnotes"><em>284, Niderazon</em> </h1>
+
+<p>The way of Hierrau confounds me. Not only does it insist that marriage can only derive from irrational attraction and romance (implying that romance is a prerequisite for procreation, and thus restricting romance to opposing genders), and that BEST FRIEND relationships are exclusively among siblings, cousins, or parents to children (forbidding any strong relation outside the family unit), but it also attempts to impose those norms not just on its own followers but on US, the "vedil" who have nothing to do with their practices or culture.</p>
+
+<p>What do they make of it (and, if we choose to follow, what should we make of it) when two married people turn against one another, or when their pairing is found unsuitable for raising their child? They have no choice but to leave the child or the family unit as a whole to be brought to harm, with no framework for polar pairing or child transfer, and no formal sense of responsibility on the parents. And this would happen far more with their strange impositions on romance; irrational relationships are much more volatile. Despite this, they insist on stretching out family units for long enough that they are distorted into unrecognizability.</p>
+
+<p>And it is also confusing that romantic relationships, which realize similarly to BEST FRIEND relationships (differing by their origins and underlying emotions), are seen as an entirely opposing category - to confuse them is to commit a minor inaccuracy, but it is seen as almost offensive to those of Myalvi for no apparent reason, especially when describing members of a family.</p>
 
 
+<h1 id="e31">From a compilation of the entries of Dr. Gaster</h1>
+<h3 class="patchnotes"><em>908, Yarzon-Ebott</em> </h1>
+
+
+
+<p>The following is a compilation of lab entries by our dear old Royal Scientist, Dr. Gaster! They provide some exciting insight into the construction of the CORE, and reveal that those grey folk might not be telling the complete story.</p>
+<div class="infocontainer">
+<h4>Entry #1:</h4>
+<p>Ah, my old workplace... The Steamworks. It's been a long time, and the place has definitely seen better days.&nbsp;</p>
+<p>I've had an idea for a potential replacement for a while, and now that I've reorganized Royal Sciences, we can finally start the construction.</p>
+<h4>Entry #2:</h4>
+<p>"Royal Scientist", eh? Is that what people are calling me? I guess that is kind of what I am now, since Royal Sciences is, ehm, no longer all that royal....</p>
+<p>And with Akhan living with Kar&eacute;li, this couldn't be a more interesting time for the Underground....</p>
+<h4>Entry #3:&nbsp;</h4>
+<p>The planning is going well. There is, however, one concern brought to me by No. 3: the idea that extracting so much magical energy from Ebott could bind Ebott's magic to the CORE's continued operation.</p>
+<p>This would prove disastrous were the CORE to shut down or stop working.</p>
+<h4>Entry #4:</h4>
+<p>Good news: No. 3's concerns are essentially unfounded, although in my investigations on what would happen were the CORE to overload, I have developed a potential concern.</p>
+<h4>Entry #5:</h4>
+<p>The CORE being overloaded would cause an immense surge in magic, which could severely weaken and ultimately break the timespace continuum, the results of which would be apocalyptic in scale.</p>
+<h4>Entry #6:</h4>
+<p>This should only happen under extreme circumstances, so as long as people are careful to ensure correct operation of the CORE, things should be fine. However, I have added safety features to avoid the worst.</p>
+<h4>Entry #7:</h4>
+<p>A lady, Alfi, and her child Alfi-Niv came to visit me regarding the progress on the CORE today. Alfi-Niv showed me a sliding puzzle: you slide tiles around and have to get all the lines on them to connect up.</p>
+<p>It gave me an idea: what if parts of the CORE facility could be shuffled around to make things easier (or perhaps more intellectually stimulating?) to the people working at the facility?</p>
+<p>On that note, I've also added puzzles to some of the CORE's mechanisms.</p>
+<h4>Entry #8</h4>
+<p>Akhan was found and killed by Royal Guards in Hotland recently. That makes three. I find Ruaeli's decision to kill all humans who enter detestable, and I swear to protect the next human that enters the Underground at all costs.</p>
+<h4>Entry #9</h4>
+<p>I'm now having Alfi's family over regularly to discuss the CORE's development. The youngest one, Alfi-Niv, has made some useful comments on things I'm honestly embarrassed that I missed, such as the problem of cooling the CORE down.</p>
+<p>She suggested that ice be sent all the way from Snowdin to cool the CORE. Her ideas are always the silliest but also the most fascinating. Very, very interesting indeed.</p>
+<h4>Entry #10</h4>
+<p>I've had to step away from work on the CORE for the time being, and perhaps for the foreseeable future, because there has been an interesting development at home: a young skeleton, Arfia, has just... shown up at my lab and made himself at home.</p>
+<p>Nobody knows where he came from, or anything else about him. Like Alfi-Niv, he seems to be uncannily smart for his age, but is a lot more laid-back. Since nobody else wanted Arfia, I've taken him in and am now raising him.</p>
+<h4>Entry #11</h4>
+<p>Alfi's family showed up again to discuss me stepping away from the CORE. Additionally, Arfia met Alfi-Niv for the first time: the two seemed like a perfect match for each other.</p>
+<h4>Entry #12.</h4>
+<p>It's been a while, and the CORE is now fully operational. While I'll still have to check in on operations to make sure everything goes smoothly during the first couple months.</p>
+<p>The Steamworks will remain active to allow people working on science there to finish their work, and will shut down on its own accord. I hear they're already planning to shut off the main generator.</p>
+<h4>Entry #13.</h4>
+<p>Two new arrivals at the lab: Arfia showed up with another skeleton, Kobzo. Additionally, a human entered the Underground, and found my lab. Okhelai is a curious, perseverant one. I see myself in her, somewhat.</p>
+<h4>Entry #14.</h4>
+<p>Arfia suggested a new direction to explore: alternate timelines and parallel universes. I have already done preliminary research, and have become aware of scientifically interesting targets. Universes within universes. Realities below realities. This will be very interesting.</p>
+<h4>Entry #15.</h4>
+<p>I have created a device that is potentially capable of opening a gateway to access other realities, at least as a passive observer. The problem is that it requires a huge amount of power to activate.</p>
+<p>There's only one source I can think of that can produce the amount of power required all at once for this to work.</p>
+<h4>Entry #16.</h4>
+<p>no No NO NO NO NO</p>
+<p>I SHOULD HAVE KNOWN ABOUT THIS</p>
+<p>ALFI-NIV WAS RIGHT. OKHELAI WAS RIGHT</p>
+<p>WHAT HAVE I DONE?</p>
+<p>WHAT HAVE I DONE!?<br /><br /></p>
+</div>
+<p>What happens next? Geheheh! Who knows?</p>
+<p>There was only ever one more entry...</p>
+<p>After that, it all stopped.</p>
+
+
+<h1 id="e32">From a flyer for the Gaster Followers</h1>
+<h3 class="patchnotes"><em>907, Yarzon-Ebott</em> </h1>
+
+
+<h3>
+  <span>THE GASTER FOLLOWERS</span>
+</h3>
+
+<p>
+  <span>We have the solution to all the universe's greatest mysteries!</span>
+</p>
+
+<p>
+  <span>Memories that you can't explain? It's GASTER!</span>
+  <span><br />
+</span>
+</p>
+
+<p>
+  <span>Mysterious calls from nowhere? It's GASTER!</span>
+</p>
+
+<p>
+  <span>Inconsistencies in behavior? It's GASTER!</span>
+</p>
+
+<p>
+  <span>Strange voices in your head? It's GASTER!</span>
+</p>
+
+<p>
+  <span>Where do baby monsters come from? It's GASTER!</span>
+</p>
+
+<p>
+  <span>Strange encounters in disappearing rooms? Guess what - It's GASTER!</span>
+</p>
+
+<p>
+  <span>Call the GASTER FOLLOWERS today at YZ-4-6666-6666 to get answers to your biggest questions, such as "who created the CORE?", "Who was the smartest person to ever live?", and most importantly, "who's listening right now as you read this very flyer?"</span>
+</p>
 
 <!--STOP WRITING AT THIS POINT-->
 </div>
