--- a/index.html
+++ b/index.html
@@ -899,6 +899,8 @@
 <p class="patchnotes"><br><a href="#e30">Entry 30: From a commentary on Myalvi culture by an unknown author</a></p>  
 <p class="patchnotes"><br><a href="#e31">Entry 31: From a compilation of the entries of Dr. Gaster</a></p> 
 <p class="patchnotes"><br><a href="#e32">Entry 32: From a flyer for the Gaster Followers</a></p>  
+<p class="patchnotes"><br><a href="#e33">Entry 33: From a statement by Karol-Kalvi</a></p>  
+<p class="patchnotes"><br><a href="#e34">Entry 34: From <em>On the nature of the recovered humans</em></a></p>  
 <hr>
 
 <h3 class="patchnotes" id="vg">Vector's Socials</h3>
@@ -951,7 +953,7 @@
     <p>
         <!--<span>Emperor Karol-Kalvi Foster was the first emperor of Rahazun after the overthrow of Siegetev Seransai following the war. Most of Karol-Kalvi's reign was spent cleaning up the mess that Siegetev left, but a lot of the history of Yarzon of the Great Watershed got swept up in this. It's not particularly like the following rulers were much better; Lekusa-Kalvi-hin basically did nothing as a ruler, and the issue of Yarzon was far in the past for the following rulers, who wanted to rid themselves of the issue. History recalls one particular instance where a statue of Tomi-Rugan located in Yarhe, originally made in 647 to commemorate Tomi-Rugan and symbolize unity between humans and yarov, was discarded in a pit at Mt. Ebott in 724 during the reign of Ana-Kalvi Foster. One of the people involved in the disposal of the statue, Maniri Lahok, ended up trapped in a chasm in Mt. Ebott due to the barrier; this was a sky-exposed passage largely separated from the main Underground cavern. Maniri died shortly after, and the SOUL was never recovered.</span>
     -->
-  [Pending rewrite]    
+  History recalls one particular instance where a statue of Tomi-Rugan located in Yarhe, originally made in 647 to commemorate Tomi-Rugan and symbolize unity between humans and yarov, was discarded in a pit at Mt. Ebott in 724 during the reign of Ana-Kalvi Foster and during a major period of development and change in the city it was in. One of the people involved in the disposal of the statue, Maniri Lahok, ended up trapped in a chasm in Mt. Ebott due to the barrier; this was a sky-exposed passage largely separated from the main Underground cavern. Maniri died shortly after, and the SOUL was never recovered.
   </p>
       <h1 id="e3">From <em>History of Yarvant</em> </h1>
       <h3 class="patchnotes"><em>915, Yarzon-Ebott</em> </h1>
@@ -1863,6 +1865,28 @@ Sarnelkh Seransai (904 SR-present)</p>
 <p>
   <span>Call the GASTER FOLLOWERS today at YZ-4-6666-6666 to get answers to your biggest questions, such as "who created the CORE?", "Who was the smartest person to ever live?", and most importantly, "who's listening right now as you read this very flyer?"</span>
 </p>
+
+<h1 id="e33">From a statement by Karol-Kalvi</h1>
+<h3 class="patchnotes"><em>664, Rahazun</em> </h1>
+
+<p>Siegetev and the war resulting from his actions are detestable, and I would see to it that his legacy is erased from Rahazun's future, such that it may not be further corrupted by his influence. My reign will be focused on helping Rahazun recover from Siegetev's corruption, and on repairing our relationship with Yarzon-Ezvelan. However, we must take care to avoid inciting additional enmity with Tur-Myalvi beyond what we already have since Siegetev was cast from his position. We are not in a political state where we can defend against Myalvi at the moment, and we do not have many allies.</p>
+
+<p>P.S. We will review the situation with Mt. Ebott shortly. Altria appears either unable or unwilling to reverse the barrier creation; four of the seven people in the barrier creation group refused to continue working after the end of Siegetev's regime.</p>
+
+<h1 id="e34">From <em>On the nature of the recovered humans</em></h1>
+<h3 class="patchnotes"><em>919, Ri-Ebott</em> </h1>
+<p>From Dr. Alfizo's discoveries regarding DETERMINATION animating inanimate objects if there is a pre-existing identity attached to them (Ondeli, for instance), and Ana-hin's experiences regarding Khara "attaching" to their SOUL and DETERMINATION, it has been determined that a dead human can be brought back to life given their SOUL and original body. Mt. Ebott's 'True Lab' has been converted into a research facility to study this. The process involves extracting the DETERMINATION from the human's SOUL, and adding it to the human's body. This transforms the body into a being which resembles the human but has an incomplete mental state, lacking certain capacities or motives. This being, because it is technically neither a human nor a yaref, can then absorb the original SOUL, fully reinstating the human's identity. Note that the resurrected being has major differences from a normal human; while it can move and interact, it almost functions as if the body is being "puppeted" by the consciousness, and most autonomous biological functions are entirely absent. This is an extremely unusual type of being; an established term does not exist for it; we are simply calling these "resurrectives" for the time being.</p>
+
+<p>The first successful case of a human being brought back to life in their original body was Waishan, a human with a yellow SOUL who fell into the Underground and died shortly after, several years before Ana-hin's journey through the Underground, who was brought back at the behest of the Ketsukane family and former Royal Guard member Mazali. This resurrection was complicated as the SOUL was already unusually low in DETERMINATION, so special care had to be taken to preserve it.</p>
+
+<p>This process is still in its early stages of development, and is unlikely to become widely available any time soon; the only facility currently capable of handling the process is the True Lab, though work is underway by Arfia and Dr. Alfizo to construct a secondary facility in Ri-Ebott.</p>
+
+<p>... (Section omitted)</p>
+
+<p>P.S. The explanation for this is not, in fact, 'Gaster', despite what a small group of people insist. Neither Kobzo Gaster or Dr. Gaster are relevant here.</p>
+
+
+
 
 <!--STOP WRITING AT THIS POINT-->
 </div>
