--- a/index.html
+++ b/index.html
@@ -900,7 +900,11 @@
 <p class="patchnotes"><br><a href="#e31">Entry 31: From a compilation of the entries of Dr. Gaster</a></p> 
 <p class="patchnotes"><br><a href="#e32">Entry 32: From a flyer for the Gaster Followers</a></p>  
 <p class="patchnotes"><br><a href="#e33">Entry 33: From a statement by Karol-Kalvi</a></p>  
-<p class="patchnotes"><br><a href="#e34">Entry 34: From <em>On the nature of the recovered humans</em></a></p>  
+<p class="patchnotes"><br><a href="#e34">Entry 34: From <em>On the nature of the recovered humans</em></a></p> 
+<p class="patchnotes"><br><a href="#e35">Entry 35: From Arfia-hin and Dr. Alfizo's speech on the "Level of Violence" system</a></p>  
+<p class="patchnotes"><br><a href="#e36">Entry 36: From a speech given by the Storytellers of New Home</a></p>  
+<p class="patchnotes"><br><a href="#e37">Entry 37: From <em>The Century</em>, annotated</a></p>  
+ <p class="patchnotes"><br><a href="#e38">Entry 38: From <em>Welcome Back, Yarvant!</em></a></p>  
 <hr>
 
 <h3 class="patchnotes" id="vg">Vector's Socials</h3>
@@ -987,8 +991,7 @@ Home became the center of the yaref population, and although the other settlemen
         <p>----</p>
         
         <p>Citations: <br />
-        "On the Nature of the Barrier" by Senior Researcher Alfi Alfizo<br />
-        "Spells and Curses, Vol. 1" by Chief Engineer Altria Timirazo</p>
+        "On the Nature of the Barrier" by Senior Researcher Alfi Alfizo<br /></p>
 
         <h1 id="e5">From <em>A Specification on the Properties of Yahir, and on the Historical Concepts of Hope and Determination</em> </h1>
         <h3 class="patchnotes"><em>918, Yarzon-Ebott</em> </h1>
@@ -1885,7 +1888,196 @@ Sarnelkh Seransai (904 SR-present)</p>
 
 <p>P.S. The explanation for this is not, in fact, 'Gaster', despite what a small group of people insist. Neither Kobzo Gaster or Dr. Gaster are relevant here.</p>
 
+<h1 id="e35">From Arfia-hin and Dr. Alfizo's speech on the "Level of Violence" system</h1>
+<h3 class="patchnotes"><em>917, Monselian</em> </h1>
+<p>
+  <strong>[Non-diegetic note: much of this entry has been transcluded from dialogue lines in UNDERTALE by Toby Fox, and exists within Undersided to provide context for those unfamiliar with UNDERTALE. As such, it is not under the license that the rest of the work follows. Please credit Toby Fox when using this text.]</strong>
+</p>
 
+<p>
+  <span>Arfia-hin: "Well."</span>
+</p>
+
+<p>
+  <span>Arfia-hin: "We will begin with the exposition of the model of EXP and LV." </span>
+</p>
+
+<p>
+  <span>Arfia-hin: "What is EXP? It's an acronym. It stands for 'execution points'. A way of quantifying the pain you have inflicted on others. When you kill someone, your EXP increases. When you have enough EXP, your LV increases."</span>
+</p>
+
+<p>
+  <span>Arfia-hin: "LV, too, is an acronym. It stands for Level of Violence. People acting in bad faith have stated that it stands for 'Love', but this is simply a deception. LV is a measurement of someone's capacity to hurt. The more you kill, the easier it becomes to distance yourself. The more you distance yourself, the less you will hurt, and the more easily you can bring yourself to hurt others."</span>
+</p>
+<h4>Origins</h4>
+<p>
+  <span>Dr. Alfizo: "Ooh! Ooh! And it's called EXP and LV because you know, like, i- it sorta works like games where you kill things and gain experience and level up! But here it's like, a darker messed up version because killing people is bad!"</span>
+</p>
+
+<p>
+  <span>Arfia-hin: "yeah. me and alfi came up with this cuz she was obsessing over humans and how differently people like siegetev acted compared to people like okhelai and magzi, and after hearing of that attack by that other human on that one snowdin kid I was wondering what it would take for something like that to happen for real."</span>
+</p>
+
+<h1 id="e36">From a speech given by the Storytellers of New Home</h1>
+<h3 class="patchnotes"><em>913, New Home</em> </h1>
+<p>
+  <strong>[Non-diegetic note: much of this entry has been transcluded from dialogue lines in UNDERTALE by Toby Fox, and exists within Undersided to provide context for those unfamiliar with UNDERTALE. As such, it is not under the license that the rest of the work follows. Please credit Toby Fox when using this text.]</strong>
+</p>
+<h4>Khara and Ondeli</h4>
+<p>
+  <span>A long time ago, a human, Khara, fell into the RUINS. Injured by their fall, the human called out for help.<br />
+Ondeli, the king's son, heard the human's call. He brought the human back to the castle. Over time, Ondeli and the human became BEST FRIENDS. The King and Queen treated the human child as their own. The Underground was full of hope.</span>
+</p>
+<h4>Khara's death</h4>
+<p>
+  <span>Then... One day...<br />
+Khara became very ill. They had only one request - to see the golden flowers from their village, Ri-Ebott.<br />
+But there was nothing we could do. Several days passed before Khara died.<br />
+Ondeli, wracked with grief, absorbed Khara's SOUL. He transformed into an unsef, a being with incredible power.<br />
+With the human SOUL, Ondeli-Khara crossed through the barrier. He carried the human's body into the sunset, back to the village of the humans.<br />
+When Ondeli-Khara reached the center of the village, he found a bed of golden flowers. He carried the human onto it.</span>
+</p>
+<h4>The fate of Ondeli-Khara</h4>
+<p>
+  <span>Suddenly, screams rang out.<br />
+The villagers saw Ondeli-Khara holding the human's body.<br />
+They thought that he had killed the child. The humans attacked him with everything they had. He was struck with blow after blow.<br />
+Ondeli-Khara had the power to destroy them all.</span>
+</p>
+<p>
+  <span>But...<br />
+Ondeli-Khara did not fight back. Clutching Khara's body... Ondeli-Khara smiled, and walked away.<br />
+Wounded, Ondeli-Khara stumbled home. He entered the castle, collapsed and died. His dust spread across the garden.<br />
+<br />
+The kingdom fell into despair.<br />
+The king and queen had lost two children in one night. The humans had once again taken everything from us.<br />
+The king decided it was time to end our suffering. Every human who falls down here must die. With enough souls, we can shatter the barrier forever. It's not long now.</span>
+</p>
+<h4>Hope for yarov</h4>
+<p>
+  <span>King Ruaeli will let us go. King Ruaeli will give us hope. King Ruaeli will save us all.</span>
+</p>
+
+<p>
+  <span>You should be smiling, too.</span>
+</p>
+
+<p>
+  <span>Aren't you excited?</span>
+</p>
+
+<p>
+  <span>Aren't you happy?</span>
+</p>
+
+<p>
+  <span>You're going to be free.</span>
+</p>
+
+<h1 id="e37">From <em>The Century</em>, annotated</h1>
+<h3 class="patchnotes"><em>762, Yarzon-Ebott</em> </h1>
+
+<p>
+  <strong>[Non-diegetic note: much of this entry has been transcluded from dialogue lines in UNDERTALE by Toby Fox, and exists within Undersided to provide context for those unfamiliar with UNDERTALE. As such, it is not under the license that the rest of the work follows. Please credit Toby Fox when using this text.]</strong>
+</p>
+
+<p>
+  <span>Why did the humans attack? Indeed, it seemed that they had nothing to fear. Humans are unbelievably strong. It would take the SOUL of nearly every yaref[a] just to equal the power of a single human SOUL. But humans have one weakness. Ironically, it is the strength of their SOUL. Its power allows it to persist outside the human body, even after death. If a yaref defeats a human, or a human simply dies, they can take its SOUL. A yaref with a human SOUL (an 'unsef') - a horrible beast with unfathomable power; this was commonplace with ages past, but the humans' new king was terrified of the prospect, for one simple reason. It is almost always the case that the extreme power of an unsef is restricted by the conscious independence of its constituents. However, the unsef Tomi-Rugan, formed in 647 SR upon the human Tomi's death, displayed a considerable amount of internal harmony, almost as if it was a single consciousness, meant to be...</span>
+</p>
+
+<p>
+  <span>This is the power that the humans feared.</span>
+</p>
+
+<p>
+  <span>This power, however, has no counter. A human cannot take a yaref SOUL, because when a yaref dies, its SOUL disappears, and an incredible power would be needed to take the SOUL of a living yaref. </span>
+</p>
+
+<p>
+  <span>There is only one exception. The SOUL of a special species[b] of yaref called a "boss yaref", whose SOUL is strong enough to persist after death, if only for a moment. A human could absorb this SOUL, but this has never happened, and now it never will.</span>
+</p>
+
+<p>
+  <span>The humans, afraid of our power, declared war on us. They attacked suddenly, and without mercy. In the end, it could hardly be called a war. With the disappearance of Tomi-Rugan, the humans were too powerful, and us yarov too weak. Not a single SOUL was taken, countless yarov were turned to dust, and countless more fled to the furthest north to save themselves and Yarzon - but that left us behind, hurt, beaten, and fearful for our lives. We surrendered to the humans, and seven of their greatest artificers and technicians sealed us underground, with a barrier which anything can enter through, but only a being with a powerful SOUL can leave.</span>
+</p>
+
+<p>
+  <span>There is one known way to break this barrier and free the yarov of Ebott - if a huge power, equivalent to seven human SOULs, attacks the barrier, it will be destroyed.</span>
+</p>
+<h4>Annotations</h4>
+<p>
+  <span>[a] Probably meaning in the Underground; a yaref SOUL is between 10[1] and 95,000[2] times weaker than a human SOUL by various metrics, and the Underground's population was 104,013 as of 61X[3], when this was written.</span>
+</p>
+
+<p>
+  <span>[b] There are, as of 913 SR / 251X, multiple species of yaref in Liruzon with boss characteristics[4] - Mimigas (the species referenced here[5]) are only one example.</span>
+</p>
+<h4>Citations</h4>
+<p>
+  <span>[1] "The Effective Power System", P. S. Gelin</span>
+</p>
+
+<p>
+  <span>[2] "The properties and specification of barriers", Altria</span>
+</p>
+
+<p>
+  <span>[3] "Yarzon-Ebott Census, 61X", Ruaeli</span>
+</p>
+
+<p>
+  <span>[4] "The Integrity Files", Chujin, disclosed by Ceroba</span>
+</p>
+
+<p>
+  <span>[5] "The status of the kinds of yarov after the war", Bezgazni</span>
+</p>
+
+<p><br />
+<br />
+</p>
+
+
+<h1 id="e38">From <em>Welcome Back, Yarvant!</em></h1>
+<h3 class="patchnotes"><em>913, Jezen Company Website</em> </h1>
+
+<p>
+  <em>
+    <span>Accessed from website: gnet:info/jezencompany/ebott/913/07/15</span>
+  </em>
+</p>
+
+<p>
+  <strong>WELCOME BACK, YARVANT!</strong>
+</p>
+
+<p>
+  <span>The yarov of Ebott have been freed!</span>
+</p>
+<h4>Ana Kaizo</h4>
+<p>
+  <span>While the government was bumbling around and bumping into itself to work out what to do with Ebott (seems Ebott truly is cursed after all), it ended up being one determined individual, Ana-hin Kaizo, who took matters into their own hands and decided to do what the higher-ups somehow never ended up doing. With the help of the friends they made, and a certain Prince Okhelai, Ana-hin broke the barrier separating the Ebott Underground from the wider world, allowing Yarvant to populate Liruzon once more (this also served as a symbol to the yarov of Yarzon that it was safe to return home).</span>
+</p>
+
+<p>
+  <span>Ana-hin had known of the plight of Ebott since first learning about yarov in primary school, and had always wanted to do something to help them. It was only after completing primary school, though, that Ana finally felt independent enough to go out on their own to journey to Ebott. They didn't know what would lie in store, or even what would be left of the yarov when they arrived, but they were determined to do something about it by any means possible. And they succeeded, and are now slated to become the official ambassador of Yarzon-Ebott to the humans. (Kobzo Gaster, one of Ana-hin's close yaref friends, is the official mascot!)</span>
+</p>
+<h4>The return of yarov</h4>
+<p>
+  <span>But now, as for the main topic of today's announcement, a short primer on yarov! You likely learned about them in primary school, but a good portion of you have probably never seen one in person (especially since the recent restrictions on travel to Ezvelan), and it would be beneficial for you to get to know what they are like, since you'll most likely soon see them in everyday life.</span>
+</p>
+
+<p>
+  <span>Yarov are people (like you and me), but instead of being made of blood and flesh and bones, they're... more vague and expressive (a kind of yahiric manifestation). The most direct expression of whatever the yaref seems to be, with just enough physicality to enable its manifestation (and not even that, in the case of what Dr. Alfizo has termed 'amalgamates', but that's a subject for another time), resulting in exaggerated poses, proportions, and behaviors, inconsistent physical details, and rapid healing and recovery. They eat, and sleep, and talk, and feel pain, and joy, and have families, but they do not have stomachs, nor brains, nor lungs, nor nerves, nor hearts, nor reproductive organs. </span>
+</p>
+<h4>Yareva diversity</h4>
+<p>
+  <span>As a result of all this, yarov are intensely diverse beings, with hundreds of different kinds recorded in just the comparatively tiny population of Ebott alone, ranging from animals to abstract shapes to elemental beings to types that could pass as human races if not for that distinct expressive nature, and from mere centimeters tall to huge beings the size of human buildings.</span>
+</p>
+
+<p>
+  <span>One of the most notable characteristics of yarov is their ability to fluently do lots of simple things (such as making a fire) that humans have often relied on technology to do for them, depending on the kind of yaref and other factors, as well as making all sorts of other yahiric manifestations as part of their expressive capabilities (which is what one book means by 'bullet patterns', in case you see that term in the wild).</span>
+</p>
 
 
 <!--STOP WRITING AT THIS POINT-->
