--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Undersided</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="author" content="">
+  <link rel="shortcut icon" type="image/png" href="favicon.png">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto Serif">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Orbitron">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Comfortaa">
