--- a/index.html
+++ b/index.html
@@ -1525,9 +1525,10 @@ Tur-Myalvi: 82.3</p>
          which was the basis for the very first primary curriculum. It has been revised over the years as both our understanding of the world and our culture evolved, and the modern 
          "Common Knowledge" course found in every primary school is ultimately based on the original Guide. </span>
   </p>
+</div>
+ <div id="e20"class="tab-content">
 
-
-  <h1 id="e20"class="tab-content">From <em>The Fort Karzen Files</em> </h1>
+  <h1>From <em>The Fort Karzen Files</em> </h1>
   <h3 class="patchnotes"><em>267 BF, Tur Myalvi</em> </h1>
   <p>
     <span>Those already living in the lands of Myalvi do not have a firm grasp on reality as it is, often deriving knowledge from their fictions rather than from the truth. This is because their form of "consciousness" is fundamentally flawed; they think of themselves as, if they don't actually be, inherently non-conscious, receiving inspiration only from higher sources. This is reflected in how they often (seemingly irrationally) place people with debilitating mental disorders in prestigious positions. They additionally regularly violate the sanctity of sexual relations; their marriage customs are not fully understood and seem to deviate from romantic love in many situations; this implies a broken form of morality, one which does not respect any traditional form of formality whatsoever. They additionally lack any sort of reasonable structure to their leadership, answering to local lords who then answer to their greater leaders. The natives of Myalvi are a harsh, warlike people, who refuse to follow the faith of Hierrau; we have encountered resistance from native armies on all fronts during colonization, though we have managed to hold onto our fortifications near the Sevevda River (namely, Fort Sevevda itself along with Fort Karzen and Fort Ruerden). </span>
