--- a/index.html
+++ b/index.html
@@ -871,7 +871,8 @@
         <hr>
 
                    <p class="patchnotes"><br><a href="#e0"> Preface</a></p>   
-                                      <p class="patchnotes"><br><a href="#announcements">News (e.g. new entries)</a></p>   
+                                      <p class="patchnotes"><br><a href="#announcements">News (e.g. new entries)</a></p> 
+                                      <p class="patchnotes"><br><a href="#nondiegetic">Guides</a></p>  
         <h3>Recommended context</h3>
 <p class="patchnotes"><a href="#e1">1. From <em>Once Upon A Time</em></a></p>
 <p class="patchnotes"><br><a href="#e3">3. From <em>History of Yarvant</em></a></p>
@@ -921,6 +922,7 @@
 <p class="patchnotes"><br><a href="#e22">22. From <em>University of Monselian</em></a></p> 
 <p class="patchnotes"><br><a href="#e24">24. From <em>The Kinds of Human</em></a></p> 
 <p class="patchnotes"><br><a href="#e32">32. From a flyer for the Gaster Followers</a></p>  
+<p class="patchnotes"><br><a href="#e42">42. From correspondence between Dini and Sonaza Bokelzidrej</a></p>  
 
 
 <hr>
@@ -954,6 +956,7 @@
 
 <div class="list">
   <ul class="centerlist">
+        <li><p>2025-08-16: Added entry <a href="#e42" target="_blank" rel="noopener noreferrer">42</a> to the "Miscellaneous" section, about the Bokelzidrej family and plurality, and added a non-diegetic guide section.</p></li>
     <li><p>2025-08-02: Added entry <a href="#e41" target="_blank" rel="noopener noreferrer">41</a> to the "Undertale" section, about the Underground, continuing entry 40.</p></li>
         <li><p>2025-08-01: Added entry <a href="#e40" target="_blank" rel="noopener noreferrer">40</a> to the "Undertale" section, about the Underground. This is the longest entry.</p></li>
     <li><p>2025-07-28: Added entry <a href="#e39" target="_blank" rel="noopener noreferrer">39</a> to the "History" section, about Montera as a nation </p></li>
@@ -3476,6 +3479,101 @@ Now Gaster doesn't have a TV.</span>
 </p>
 </div>
 </div>
+
+ <div id="e42" class="tab-content">
+  <h1>From correspondence between Dini and Sonaza Bokelzidrej</h1>
+<h3 class="patchnotes"><em>914, Bokelzidreja-Evunzo / Farnitan</em> </h1>
+<p>
+  <span>Dear "Count Grandma",</span>
+</p>
+
+<p>
+  <span>How have things been since I last sent you a letter? Is your leg doing better now? Did anyone stop by? Caught any cool bugs?</span>
+</p>
+
+<p>
+  <span>As for me, Year 3 is going well! I've met someone new recently. A grown-up, to be clear. Their name is... Well, it's Mr. Viratas, my math teacher. But "Falairos" subbed for my art class while Ms. Kalvi was out sick, where Falairos is Mr. Viratas' alter ego or something, someone else in the same body. But what's cool is that Viratas CREATED Falairos. Apparently Viratas liked pretending to be Falairos, but soon enough, he just... didn't have to pretend anymore.</span>
+  <span><br />
+</span>
+  <span><br />
+</span>
+  <span>Falairos is a badguy. He says that but doesn't actually seem to want to hurt anyone, just to "RULE FARNITAN!!!". (Maybe in your infinite comital wisdom you could lend a hand? ;) ) He's really cool, and reminds me of when we go to see Ira-Zedav every so often. I mean, makes sense that he's teaching art and Viratas is teaching math. He seems to treat his "evil schemes" as a form of art.</span>
+</p>
+
+<p>
+  <span>Sincerely,</span>
+</p>
+
+<p>
+  <span>Dini</span>
+</p>
+
+<p> </p>
+
+<p>
+  <span>Dear "Chief Dini",</span>
+</p>
+
+<p>
+  <span>My leg is doing alright. I got the folks at Parzon City to send a doctor over. And yes. I caught this really colorful one, can't wait for you to come and see it!</span>
+</p>
+
+<p>
+  <span>Well, Falairos is interesting. I'm excited to meet him, and I know you two are gonna get along rather well. Did you know? I know someone like that as well! The shaman at Parzon City, Iramandal, has hundreds of people in their head, who all came from her internal world and were brought into reality through her form. I bet you'll learn about this soon at school as well.</span>
+</p>
+
+<p>
+  <span>As for being "Count Grandma", I've gotten to hang out with a lot of the higher-ups in Farnitan! I might take you to meet the queen at some point in the future. Falairos can come along as well.</span>
+</p>
+
+<p>
+  <span>With love,</span>
+</p>
+
+<p>
+  <span>Grandma</span>
+</p>
+</div>
+
+
+<!--
+GUIDES
+GUIDES
+GUIDES
+GUIDES
+GUIDES
+-->
+
+<div id="nondiegetic" class="tab-content">
+  <h1>Guides</h1>
+  <p>DISCLAIMER: This is not an in-universe source; this content is not diegetic unless explicitly specified otherwise.</p>
+<h3 class="patchnotes">Character Name Guide</h1>
+<p>
+Undersided uses some replacement names for many Undertale characters.
+<br><br>
+Sans - Arfia<br>
+Papyrus - Kobzo<br>
+Alphys - Alfi Alfizo<br>
+Undyne - Londin Odai Dalevzo<br>
+Toriel - Onider<br>
+Asgore - Ruaeli Brujgal<br>
+Gerson - Ger Odai Gerzo Unzvel<br>
+Napstablook - Vinibor Lugi<br>
+Mettaton - Merabor Lugi<br>
+Frisk - Ana-hin Kaizo<br>
+Chara - Khara/Magzi Brujgal<br>
+
+
+
+</p>
+
+
+</div>
+
+
+
+
+
 
 <!--STOP WRITING AT THIS POINT-->
 
